--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/redux": "^3.6.0",
     "@types/webpack-env": "^1.16.3",
     "baron": "^3.0.3",
+    "firebase": "^9.6.3",
     "history": "^5.2.0",
     "lodash.isequal": "^4.5.0",
     "normalize.css": "^8.0.1",
